2004-06-13  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Sort by album name if the album has > 3 artists.

2004-06-06  Alexander Shopov <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2004-06-06  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese) into ALL_LINGUAS.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bumped version number to 0.6.2.99.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Released 0.6.2.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Don't crash when dropping a file.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Add a comment explaining the AlbumKey stuff.

2004-06-05  Edd Dumbill  <edd@usefulinc.com>

	* src/DashboardFrontend.cs:
	* src/PlaylistWindow.cs:

	Generalize dashboard interface.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Add slightly fuzzy album matching.  Inspired by a patch from iain.

2004-06-05  iain  <iain@prettypeople.org>
            Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	DNDing an album to the playlist window will import it.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/StringUtils.cs:
	* src/muine.exe.config.in:

	Support non-ASCII filenames in cover image dnd.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Metadata.cs:
	* src/SongDatabase.cs:

	Fix native-to-managed string conversion.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/EllipsizingLabel.cs:

	Fix GtkLabel warning on startup.

2004-06-05  Peter Johanson  <latexer@gentoo.org>
            fer
            Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/GettextCatalog.cs:
	* src/Player.cs:
	* src/Song.cs:
	* src/StockIcons.cs:
	* src/StringUtils.cs:
